--- a/styles/Browse.css
+++ b/styles/Browse.css
@@ -16,7 +16,7 @@
     box-sizing: border-box;
     padding: 10px;
 }
-.card {
+/* .card {
     border: 1px solid color gray;
     border-radius: 8px;
     overflow: hidden;
@@ -37,7 +37,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
 .section {
     padding: 20px;
 }
