--- a/styles/Browse.css
+++ b/styles/Browse.css
@@ -31,8 +31,8 @@
     height: 0;
     padding-bottom: 75%;
     position: relative;
-}
-.card-image img {
+} */
+/* .card-image img {
     position: absolute;
     width: 100%;
     height: 100%;
