--- a/styles/Browse.css
+++ b/styles/Browse.css
@@ -16,28 +16,6 @@
     box-sizing: border-box;
     padding: 10px;
 }
-/* .card {
-    border: 1px solid color gray;
-    border-radius: 8px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position:relative;
-    transform: transform 0.3s ease;
-}
-.card-image {
-    width: 100%;
-    height: 0;
-    padding-bottom: 75%;
-    position: relative;
-} */
-/* .card-image img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-} */
 .section {
     padding: 20px;
 }
@@ -53,6 +31,36 @@
     padding: 20px;
 }
 .card:hover,
+
 .card.selected {
     transform: scale(1.05);
+}
+.t-shirt-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    width: 300px;
+    height: 400px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.image-overlay-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.image-overlay-container img {
+    width: 30%;
+    max-width: 150px;
+    max-height: 150px;
+    height: auto;
+    object-fit: contain;
+    pointer-events: none;
+    border-radius: 10px;
 }
