--- a/styles/Design.css
+++ b/styles/Design.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     position: relative;
     width: 300px;
-    height: 400px;
+    height: 100px;
     border-radius: 8px;
     overflow: hidden;
 }
@@ -34,6 +34,8 @@ background-size: contain;
 background-position: center;
 z-index: 0;
 position: relative;
+max-width: 300px;
+max-height: 300px;
 }
 
 #White {
@@ -65,9 +67,3 @@ position: relative;
 #Yellow {
     background-image: url('../assets/yellow-t-shirt.png');
 }
-#editShirtForm {
-    margin: 20px;
-    padding: 10px;
-    background-color: #f0f0f0;
-}
-
