--- a/styles/Browse.css
+++ b/styles/Browse.css
@@ -11,8 +11,6 @@
     justify-content: center;
 }
 .browse-column {
-    flex: 0 0 33.33%;
-    max-width: 33.33%;
     box-sizing: border-box;
     padding: 10px;
 }
@@ -23,13 +21,16 @@
     text-align: center;
     margin-bottom: 20px;
 }
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.card-content {
-    padding: 20px;
-}
+
+.card {
+    flex-shrink: 0;
+    flex-grow: 0;
+    width: 350px;
+    min-width: 350px;
+    height: auto;
+    overflow: hidden;
+  }
+
 .card:hover,
 
 .card.selected {
@@ -37,12 +38,7 @@
 }
 
 div.controls{
-    width: 400px;
+    max-width: 800px;
     display: flex;
     align-self: center;
-}
-
-.select.input {
-    background-color: red;
-    border: 2px solid red;
 }
