--- a/styles/Design.css
+++ b/styles/Design.css
@@ -1,3 +1,8 @@
+#browse-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
 
 .t-shirt-container {
   display: flex;
@@ -6,25 +11,32 @@
   position: relative;
   border-radius: 8px;
   overflow: hidden;
+  min-width: 300px;
+  height: 300px;
 }
 
 .image-overlay-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  overflow: hidden;
 }
 
 .image-overlay-container img {
-  width: 30%;
-  max-width: 150px;
-  max-height: 150px;
-  height: auto;
+  width: 30px;
+  height: 30px;
+  min-height: 130px;
+  max-width: 130px;
+  max-height: 130px;
   object-fit: contain;
   pointer-events: none;
   border-radius: 10px;
+  overflow: hidden;
+  flex-shrink: 0;
+  flex-grow: 0;
 }
+
+
 
 #White,
 #Black,
@@ -43,6 +55,8 @@
   max-width: 300px;
   max-height: 300px;
   user-select: none;
+  flex-shrink: 0;
+  flex-grow: 0;
 }
 
 #White {
